[package]
name = "sudoku_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
image = "0.24.7"
imageproc = "0.23.0"
rand = "0.8.5"
rusttype = "0.9.3"
